--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,9 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
+# old projects
+/1.ComputerPartsSystem.old
+/2.ComputerConfigurator.old
+
 # dependencies
 # web
 /computer-configurator-web/node_modules
